[package]
name = "proxy_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"serde_json" = "1.0.69"
"serde" = { version = "1.0.130", features = ["derive"] }
"tokio" = { version = "1.13.0", features = ["full"] }
"meta_service" = {git = "https://github.com/Moran296/esparrag_meta_service.git"}
"warp" = { version = "0.3.2"}
"rumqttc" = { version = "0.10.0"}
